--- a/MyDemo/rfidreader/src/main/res/layout/activity_main.xml
+++ b/MyDemo/rfidreader/src/main/res/layout/activity_main.xml
@@ -14,12 +14,18 @@
         android:id="@+id/btn_get_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get Usb Device List" />
+        android:text="get usb device list" />
+
+    <Button
+        android:id="@+id/btn_communicate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="start read data thread"/>
 
 
 </LinearLayout>
