--- a/MyDemo/inject/src/main/res/layout/activity_main.xml
+++ b/MyDemo/inject/src/main/res/layout/activity_main.xml
@@ -12,5 +12,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/tv"
         android:text="Hello World!" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_click"
+        android:layout_below="@id/tv"
+        android:layout_marginTop="10dp"
+        android:text="click"/>
+
 </RelativeLayout>
